k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-api
  template:
    metadata:
      labels:
        app: ecommerce-api
    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: api
          image: ghcr.io/michael7467/ecommerce-analyst-api:v16
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          volumeMounts:
            - name: data-storage
              mountPath: /app/data

            - name: artifacts-storage
              mountPath: /app/artifacts

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1500m"
              memory: "2Gi"

      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: data-pvc
        - name: artifacts-storage
          persistentVolumeClaim:
            claimName: artifacts-pvc

      restartPolicy: Always
