k8s/streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-streamlit
  template:
    metadata:
      labels:
        app: ecommerce-streamlit
    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: streamlit
          image: ghcr.io/michael7467/ecommerce-analyst-ui:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501

          startupProbe:
            tcpSocket:
              port: 8501
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            tcpSocket:
              port: 8501
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            tcpSocket:
              port: 8501
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1500m"
              memory: "2Gi"

      restartPolicy: Always
