k8s/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-streamlit-service
spec:
  selector:
    app: ecommerce-streamlit
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: NodePort
